[package]
name = "walk-the-dog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
console_error_panic_hook = "0.1.7"
futures = "0.3.30"
getrandom = { version = "0.2.11", features = ["js"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
js-sys = "0.3.66"
rand = "0.8.5"
serde = { version = "1.0.194", features = ["derive"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"

[dependencies.web-sys]
version = "0.3.66"
features = [
  "console",
  "AudioBuffer",
  "AudioBufferOptions",
  "AudioBufferSourceNode",
  "AudioContext",
  "AudioDestinationNode",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "KeyboardEvent",
  "Performance",
  "Response",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
